--- a/style.css
+++ b/style.css
@@ -1,377 +1,401 @@
-:root{
-    --font:"Opem Sans";
-    --backgroundColor:rgb(245, 245, 247);
-    --border:2px solid black;
-}
-html {
-  background-color: var(--backgroundColor);
-  font-family: var(--font);
-}
-/* header styles */
-header{
-    border-bottom: var(--border);
-    margin:0 2rem 2rem 2rem;
-
-}
-h1{
-    font-size: 2rem ;
-}
-#nav-bar ul{
-    font-size: 1rem;
-}
-header p{
-    font-size:1rem;
-    justify-content: end;
-}
-#siteLogo{
-    width:3rem;
-    margin:0;
-}
 #nav-icon1 {
-    width: 60px;
-    height: 45px;
-    position: relative;
-    padding: 5px;
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-    -webkit-transition: 0.5s ease-in-out;
-    -moz-transition: 0.5s ease-in-out;
-    -o-transition: 0.5s ease-in-out;
-    transition: 0.5s ease-in-out;
-    cursor: pointer;
-    z-index: 1000;
-  }
-  
-  #nav-icon1 span {
-    display: block;
-    position: absolute;
-    height: 9px;
-    width: 3.5rem;
-    background: black;
-    border-radius: 9px;
-    opacity: 1;
-    left: 0;
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-    -webkit-transition: 0.25s ease-in-out;
-    -moz-transition: 0.25s ease-in-out;
-    -o-transition: 0.25s ease-in-out;
-    transition: 0.25s ease-in-out;
-  }
-  
-  #nav-icon1 span:nth-child(1) {
-    top: 0px;
-  }
-  
-  #nav-icon1 span:nth-child(2) {
-    top: 18px;
-  }
-  
-  #nav-icon1 span:nth-child(3) {
-    top: 36px;
-  }
-  
-  #nav-icon1.open span:nth-child(1) {
-    top: 18px;
-    -webkit-transform: rotate(135deg);
-    -moz-transform: rotate(135deg);
-    -o-transform: rotate(135deg);
-    transform: rotate(135deg);
-  }
-  
-  #nav-icon1.open span:nth-child(2) {
-    opacity: 0;
-    left: -60px;
-  }
-  
-  #nav-icon1.open span:nth-child(3) {
-    top: 18px;
-    -webkit-transform: rotate(-135deg);
-    -moz-transform: rotate(-135deg);
-    -o-transform: rotate(-135deg);
-    transform: rotate(-135deg);
-  }
-  
-  header nav {
-    height: 100%;
-    background: white;
-    position: fixed;
-    top: 0;
-    right: -350px;
-    width: 350px;
-    transition: 0.5s all ease-in-out;
-  }
-  #nav-bar{
-    display: none;
-  }
-  #nav-bar.active {
-    right: 20px;
-    transition: 0.5s all ease-in-out;
-    display: block;
+  width: 60px;
+  height: 45px;
+  position: relative;
+  padding: 5px;
+  -webkit-transform: rotate(0 deg);
+  -moz-transform: rotate(0 deg);
+  -o-transform: rotate(0 deg);
+  transform: rotate(0 deg);
+  -webkit-transition: 0.5s ease-in-out;
+  -moz-transition: 0.5s ease-in-out;
+  -o-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
+  cursor: pointer;
+  z-index: 1000;
+}
 
+#nav-icon1 span {
+  display: block;
+  position: absolute;
+  height: 9px;
+  width: 3.5rem;
+  background: black;
+  border-radius: 9px;
+  opacity: 1;
+  left: 0;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: 0.25s ease-in-out;
+  -moz-transition: 0.25s ease-in-out;
+  -o-transition: 0.25s ease-in-out;
+  transition: 0.25s ease-in-out;
+}
+
+#nav-icon1 span:nth-child(1) {
+  top: 0px;
+}
+
+#nav-icon1 span:nth-child(2) {
+  top: 18px;
+}
+
+#nav-icon1 span:nth-child(3) {
+  top: 36px;
+}
+
+#nav-icon1.open span:nth-child(1) {
+  top: 18px;
+  -webkit-transform: rotate(135deg);
+  -moz-transform: rotate(135deg);
+  -o-transform: rotate(135deg);
+  transform: rotate(135deg);
+}
+
+#nav-icon1.open span:nth-child(2) {
+  opacity: 0;
+  left: -60px;
+}
+
+#nav-icon1.open span:nth-child(3) {
+  top: 18px;
+  -webkit-transform: rotate(-135deg);
+  -moz-transform: rotate(-135deg);
+  -o-transform: rotate(-135deg);
+  transform: rotate(-135deg);
+}
+
+#nav-bar {
+  display: none;
+}
+
+#nav-bar.active {
+  right: 20px;
+  transition: 0.5s all ease-in-out;
+  display: block;
+}
+
+nav ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: rgb(63, 62, 62);
+}
+a:hover {
+  color: rgb(1, 1, 1);
+}
+
+header {
+  border-bottom: 2px solid black;
+  margin: 0 2rem 2rem 2rem;
+}
+header h1 {
+  font-size: 2rem;
+}
+header a {
+  text-decoration: none;
+  color: rgb(63, 62, 62);
+}
+header a:hover {
+  color: rgb(1, 1, 1);
+}
+header li {
+  list-style: none;
+}
+header p {
+  font-size: 1rem;
+  justify-content: end;
+}
+header #siteLogo {
+  width: 3rem;
+  margin: 0;
+}
+header #nav-bar ul {
+  font-size: 1rem;
+}
+header #nav-bar .active {
+  right: 20px;
+  transition: 0.5s all ease-in-out;
+  display: block;
+}
+header nav {
+  height: 100%;
+  background: white;
+  position: fixed;
+  top: 0;
+  right: -350px;
+  width: 350px;
+  transition: 0.5s all ease-in-out;
+}
+header nav ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+header nav a {
+  display: block;
+  padding: 2rem;
+  color: black;
+  font-size: 2rem;
+  text-align: center;
+  text-decoration: none;
+}
+
+@media (min-width: 950px) {
+  header {
+    border-bottom: 2px solid black;
+    margin: 0 2rem 2rem 2rem;
+    display: flex;
+    justify-content: space-between;
   }
-  
-  header nav ul {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+  header h1 {
+    font-size: 3rem;
+    margin: 2rem;
   }
-  header nav ul li a {
-    display: block;
-    padding: 2rem;
-    color: black;
-    font-size: 1.8rem;
-    text-align: center;
-    text-decoration: none;
-  }
-  
-  nav ul {
-    padding: 0;
-    margin: 0;
+  header ul {
     list-style: none;
   }
-  
-h2 {
+  header p {
+    font-size: 2rem;
+    margin-top: 2.5rem;
+  }
+  header #siteLogo {
+    width: 5rem;
+    height: 5rem;
+    margin-top: 1.5rem;
+  }
+  header #nav-icon1 {
+    margin-top: 2.5rem;
+  }
+}
+main h2 {
   font-size: 2rem;
   font-weight: 600;
   margin: 2rem;
-  padding-top:2rem;
-  border-top: var(--border);
+  padding-top: 2rem;
+  border-top: 2px solid black;
 }
-h3 {
+main h3 {
   font-size: 1.5rem;
   font-weight: 600;
   margin: 1rem;
 }
-.paragraph {
+main .paragraph {
   font-size: 1rem;
   font-weight: 500;
   font-style: italic;
   margin: 1rem;
 }
-#featureImg{
-    width:95%;
+main #featureImg {
+  width: 95%;
 }
-.feature p{
-    margin:1rem;
+main .feature p {
+  margin: 1rem;
 }
-img {
+main img {
   width: 70%;
   margin: 1rem;
 }
-article {
+main article {
   padding: 0.5rem;
   margin: 1.5rem;
   border-radius: 1.5rem;
   background-color: #fff;
   box-shadow: 0px 0px 20px 2px rgba(0, 0, 0, 0.17);
 }
-
-select {
+main select {
   margin: 1rem;
   border: none;
   backdrop-filter: blur(20px);
 }
-a {
+main .loadMore {
+  margin-left: 40px;
+  padding: 14px;
+  background-color: #e2dede;
+  border-radius: 8px;
+}
+main a {
   text-decoration: none;
+  color: rgb(63, 62, 62);
 }
-a:visited {
-  color: black;
+main a:hover {
+  color: rgb(1, 1, 1);
 }
-
-.footerPara {
-  font-style: none;
-  margin-left: 1rem;
-}
-#logo{
-  width:3rem;
-}
-@media(min-width:950px){
-/* header */
-header{
-    border-bottom: 2px solid black;
-    margin:0 2rem 2rem 2rem;
-    display:flex;
-    justify-content: space-between;
-}
-h1{
-    font-size: 3rem ;
-    margin:2rem;
-}
-#nav-bar ul{
-    font-size: 2rem;
-}
-header p{
-    font-size:2rem;
-    margin-top: 2.5rem;
-}
-#siteLogo{
-    width:5rem;
-    height:5rem;
-    margin-top: 1.5rem;
-}
-#nav-icon1{
-    margin-top:2.5rem;
-}
-  
-.gallery,
-.local {
-  text-align: center;
-}
-.loadMore {
-  font-size: 1.5rem;
-  background-color: #fff;
-  padding: 0.5rem 1rem;
-  border-radius: 0.5rem;
-}
-.myAccount {
-  border-top: 2px black;
-}
-#logo {
-  width: 3rem;
-}
-.nav a {
-  color: rgb(69, 69, 72);
-}
-.nav a:hover{
-    font-size: 1.25rem;
-    color:black;
-}
-ul {
+main li {
   list-style: none;
 }
-h4 {
-  margin-left: 2.5rem;
-}
-.nav{
-    border-top: var();
-    margin-top: 2rem;
-}
-.feature{
-    display:grid;
+
+@media (min-width: 950px) {
+  main .feature {
+    display: grid;
     grid-template-columns: 2;
     grid-template-rows: 3;
-}
-.feature img{
+  }
+  main .feature img {
     max-width: 80rem;
-}
-.feature p{
+  }
+  main .feature p {
     max-width: 50rem;
-}
-#news1{
+  }
+  main .feature a {
+    text-decoration: none;
+    color: rgb(63, 62, 62);
+  }
+  main .feature a:hover {
+    color: rgb(1, 1, 1);
+  }
+  main #news1 {
     grid-column: 1/2;
     grid-row: 1/4;
-}
-article:hover{
+  }
+  main article:hover {
     animation: shadow-drop-2-center 3s linear;
-}
-@keyframes shadow-drop-2-center {
+  }
+  @keyframes shadow-drop-2-center {
     0% {
-        transform: translateZ(0);
-        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+      transform: translateZ(0);
+      box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
     }
     100% {
-        transform: translateZ(50px);
-        box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
+      transform: translateZ(50px);
+      box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
     }
   }
-
-#news2{
+  main #news2 {
     grid-column: 2/3;
     grid-row: 1/2;
-}
-#news3{
+  }
+  main #news3 {
     grid-column: 2/3;
     grid-row: 2/3;
-}
-#news4{
+  }
+  main #news4 {
     grid-column: 2/3;
     grid-row: 3/4;
-}
-
-h2{
+  }
+  main h2 {
     font-size: 3rem;
     text-align: left;
     border-top: 2px solid black;
     margin: 2rem;
-}
-.gallery article{
-    max-width: 25rem;
-    margin-top: 5rem;
-}
-.gallery{
-    display:grid;
+  }
+  main h4 {
+    margin-left: 40px;
+  }
+  main .gallery {
+    display: grid;
     grid-template-columns: 3;
     grid-template-rows: 3;
-    margin:0 2rem 2rem 2rem;
-}
-#article1{
+  }
+  main .gallery article {
+    max-width: 25rem;
+    margin-top: 5rem;
+  }
+  main #article1 {
     grid-column: 1/2;
     grid-row: 1/2;
-}
-#article2{
+  }
+  main #article2 {
     grid-column: 2/3;
     grid-row: 1/2;
-}
-#article3{
+  }
+  main #article3 {
     grid-column: 3/4;
     grid-row: 1/2;
-}
-.loadMore{
-    grid-column: 2/3;
-    grid:3/4;
-}
-#response{
+  }
+  main .loadMore {
+    position: relative;
+    margin: 0 auto;
+  }
+  main #response {
     font-size: 1.5rem;
-    padding:0.5rem;
-    margin:2rem;
-}
-.local article{
-    max-width: 25rem;
-    margin-top: 5rem;
-}
-.local{
-    display:grid;
+    padding: 0.5rem;
+    margin: 2rem;
+  }
+  main .local {
+    display: grid;
     grid-template-columns: 3;
     grid-template-rows: 3;
-    margin:2rem;
-}
-#article1{
+  }
+  main .local article {
+    max-width: 25rem;
+    margin-top: 5rem;
+  }
+  main #article1 {
     grid-column: 1/2;
     grid-row: 2/3;
-}
-#article2{
+  }
+  main #article2 {
     grid-column: 2/3;
     grid-row: 2/3;
-}
-#article3{
+  }
+  main #article3 {
     grid-column: 3/4;
     grid-row: 2/3;
-}
-.loadMore{
+  }
+  main .loadMore {
     grid-column: 2/3;
     grid: 3/4;
-}
-.nav{
-    display:grid;
+    margin: 0 auto;
+    padding: 14px;
+    background-color: #e2dede;
+    border-radius: 8px;
+  }
+  main .nav {
+    display: grid;
     grid-template-columns: 4;
-    border-top: var(--border);
-}
-.myAccount{
+    grid-template-rows: 1;
+    border-top: 2px solid black;
+  }
+  main .myAccount {
+    text-decoration: none;
+    color: rgb(63, 62, 62);
     grid-column: 1/2;
-}
-.contact{
+  }
+  main .myAccount:hover {
+    color: rgb(1, 1, 1);
+  }
+  main .contact {
+    text-decoration: none;
+    color: rgb(63, 62, 62);
     grid-column: 2/3;
-}
-.connet{
+  }
+  main .contact:hover {
+    color: rgb(1, 1, 1);
+  }
+  main .connet {
+    text-decoration: none;
+    color: rgb(63, 62, 62);
     grid-column: 3/4;
-}
-.about{
+  }
+  main .connet:hover {
+    color: rgb(1, 1, 1);
+  }
+  main .about {
+    text-decoration: none;
+    color: rgb(63, 62, 62);
     grid-column: 4/5;
+  }
+  main .about:hover {
+    color: rgb(1, 1, 1);
+  }
 }
+footer .footerPara {
+  font-style: none;
+  margin-left: 1rem;
 }
+footer #logo {
+  width: 3rem;
+}
+
+/*# sourceMappingURL=style.css.map */
